--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -6,12 +6,18 @@
 
     <!-- button 演示Java调用web -->
     <Button 
-        android:id="@+id/button"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:text="@string/button_name"
         android:layout_height="48dp"
         />
-    
+    <!-- button 演示Java调用web -->
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:text="加入会议"
+        android:layout_height="48dp"
+        />
     <!-- webview 演示web调用Java -->
     <com.github.lzyzsd.jsbridge.BridgeWebView
         android:id="@+id/webView"
